<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/title_sortBy"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sort_by"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/popularMenu"
                    android:checked="true"
                    android:title="@string/popular" />
                <item android:id="@+id/topRatedMenu"
                    android:title="@string/top_rated" />

            </group>
        </menu>

    </item>
</menu>