<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
            android:id="@+id/thumbnailMovie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/backdrop"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/colorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rateMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:drawableTop="@drawable/icon_rating"
                        android:gravity="center_horizontal"
                        android:minHeight="50dp"
                        android:padding="5dp"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icon_date"
                        android:gravity="center_horizontal"
                        android:minHeight="50dp"
                        android:padding="5dp"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>

                <TextView
                    android:id="@+id/titleMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/colorSecondary"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/sypnosisMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:lineSpacingExtra="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/titleVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:text="@string/trailers_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/listVideos"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    android:layout_weight="1"
                    android:paddingBottom="5dp" />

                <TextView
                    android:id="@+id/titleReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:text="@string/reviewa_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/listReviews"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:paddingBottom="5dp" />



                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="16dp"
                        app:srcCompat="@drawable/ic_favorite_border" />


                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>